manifests/eks/ingress.yml
# Gateway
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway
  namespace: openfaas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,192.168.0.0/16
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: 8080

---
# app docker
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: openfaas-fn
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: stac.my-domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 8080
